fix: comment button spacing

--- a/src/renderer/scss/component/_card.scss
+++ b/src/renderer/scss/component/_card.scss
@@ -60,6 +60,7 @@
 }
 
 .card__actions--center {
+  display: flex;
   align-items: center;
   justify-content: center;
 }
